--- a/src/components/monsterList/monsterList.css
+++ b/src/components/monsterList/monsterList.css
@@ -75,3 +75,19 @@
       width: 100px;
       margin: auto;
   }
+  .sort-button1 {
+    margin-top: 30px;
+    width: 150px;
+    height: 40px;
+    font-size: 2rem;
+    border-radius: 6px
+  }
+
+  .sort-button2 {
+    margin-top: 15px;
+    width: 150px;
+    height: 40px;
+    border-radius: 6px;
+    font-size: 2rem;
+  }
+
