--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,8 @@ button {
 	text-decoration: none;
 	display: inline-block;
 	font-size: 16px;
-	margin: 4px 2px;
+	margin: 0 auto;
+	margin-bottom: 2%;
 	-webkit-transition-duration: 0.4s; /* Safari */
   	transition-duration: 0.4s;
   	cursor: pointer;
