--- a/src/components/styles/custom.css
+++ b/src/components/styles/custom.css
@@ -9,3 +9,15 @@
 	margin-left: 1%;
 	margin-right: 2%;
 }
+.footer {
+	width: 80%;
+    height: 100px;
+	font-size: 2.5rem;
+	background-image: url("./formBackground.jpg");
+	background-size: cover;
+	display: flex;
+    justify-content: space-around;
+	padding-top: 10%;
+	border: 1px solid black;
+	box-shadow: 2.5px 5px 4px 5px black;
+}
