--- a/src/components/styles/custom.css
+++ b/src/components/styles/custom.css
@@ -11,13 +11,26 @@
 }
 .footer {
 	width: 100%;
-    height: 100px;
+  height: 100px;
 	font-size: 2.5rem;
 	background-image: url("./formBackground.jpg");
 	background-size: cover;
 	display: flex;
-    justify-content: space-around;
+  justify-content: space-around;
 	padding-top: 10%;
 	border: 1px solid black;
 	box-shadow: 2.5px 5px 4px 5px black;
+}
+
+.footer-p {
+	font-family: 'Charm', cursive;
+}
+
+.footer-a {
+	color: red;
+}
+
+.footer-a:hover{
+	background-color: white;
+	border-radius: 5px;
 }
