updating to show encoutner in view and ajusting css

--- a/src/components/monsterView/monsterView.css
+++ b/src/components/monsterView/monsterView.css
@@ -1,3 +1,5 @@
+select-mon
+
 .monview {
   margin-top: -20px;
   margin: auto;
@@ -198,6 +200,7 @@
 }
 
 .select-mon h3 {
+  margin-top: 200px;
   color: white;
   padding-top: 5px;
   padding-bottom: 5px;
