update for encounters display

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,6 +1,7 @@
 .footer{
     display: flex;
     padding-top: 15px;
+    margin-top: 200px;
     flex-direction: column;
     justify-content: space-between;
     clear: both;
